--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,19 @@ html {
     border-right: 1px solid #333;
 }
 
+.main-content__heading {
+    color: rgba(255, 255, 255 , 0.6);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+}
+
+.main-content__log-out {
+    text-decoration: underline;
+}
+
 .sidebar-header {
     display: flex;
     justify-content: space-between;
@@ -108,6 +121,7 @@ html {
 .sidebar-header-left {
     display: flex;
     align-items: center;
+    flex-grow: 1;
 }
 
 .logo-icon {
@@ -129,6 +143,7 @@ html {
     width: 125px;
     display: block;
     margin-right: 5px;
+    width: 100%;
 }
 
 .model-button {
@@ -306,6 +321,7 @@ html {
     padding: 20px 30px;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .main-content-header-icons {
@@ -344,6 +360,9 @@ html {
     font-size: 1em;
 }
 
+.chat-input-wrapper {
+    flex-grow: 1;
+}
 
 .chat-response {
     background-color: #2a2a2e;
@@ -405,13 +424,16 @@ html {
 }
 
 .chat-input {
-    flex-grow: 1;
     padding: 12px;
     background-color: transparent;
     border: none;
     color: #e0e0e0;
     font-size: 1em;
     outline: none;
+    width: 100%;
+    resize: none;
+    height: 72px;
+    padding-top: 20px;
 }
 
 .chat-input::placeholder {
