--- a/src/index.css
+++ b/src/index.css
@@ -500,3 +500,9 @@ html {
     color: #333;
     font-size: 16px;
 }
+
+.nav-list__icon {
+    display: flex;
+    margin-left: auto;
+    gap: 24px;
+}
